--- a/lab5/lab5a.html
+++ b/lab5/lab5a.html
@@ -30,12 +30,52 @@
 
 			var geometry = new THREE.BufferGeometry();
 			geometry.setAttribute( 'position', new THREE.Float32BufferAttribute(vertices, 3));
-			var material = new THREE.PointsMaterial( { color: 0xef983e } );
+			var sprite = new THREE.TextureLoader().load('disc.png');
+			var material = new THREE.PointsMaterial( { size: 20, sizeAttenuation: false, map: sprite, alphaTest: 0.5, transparent: true } );
 			var points = new THREE.Points(geometry, material);
 			scene.add(points);
 
+
+			var windowHalfX = window.innerWidth / 2;
+			var windowHalfY = window.innerHeight / 2;
+			var mouseX = 0;
+			var mouseY = 0;
+
+			function onDocumentMouseMove(event) {
+				mouseX = event.clientX - windowHalfX;
+				mouseY = event.clientY - windowHalfY;
+			}
+
+			function onDocumentTouchStart(event) {
+				if (event.touches.length == 1) {
+					event.preventDefault();
+					mouseX = event.touches[0].pageX - windowHalfX;
+					mouseY = event.touches[0].pageY - windowHalfY;
+				}
+			}
+
+			function onDocumentTouchMove(event) {
+				if (event.touches.length == 1) {
+					event.preventDefault();
+					mouseX = event.touches[0].pageX - windowHalfX;
+					mouseY = event.touches[0].pageY - windowHalfY;
+				}
+			}
+
+			document.addEventListener('mousemove', onDocumentMouseMove, false);
+			document.addEventListener('touchstart', onDocumentTouchStart, false);
+			document.addEventListener('touchmove', onDocumentTouchMove, false);
+
 			function animate() {
 				requestAnimationFrame(animate);
+
+				camera.position.x += (mouseX - camera.position.x) * 0.0005;
+				camera.position.y += (-mouseY - camera.position.y) * 0.0005;
+
+				var time = Date.now() * 0.00005;
+				var h = (360 * (1.0 + time) % 360) / 360;
+				material.color.setHSL(h, 0.5, 0.5);
+
 				renderer.render(scene, camera);
 			}
 			animate();
